--- a/index-writing.html
+++ b/index-writing.html
@@ -90,7 +90,7 @@
 			<span style="background-color:rgb(60, 255, 0)" >Chinese Only.<br />
 			只用于中文版本。<br /><br />
 			Currently Unavaliable. <br />
-			目前不可用。<br /><br />
+			目前羞於展示。<br /><br />
 			Thank you, I love you.<br />
 			谢谢，我爱你。
 			<p></p></span>
