--- a/Mediabased/foodmemory.html
+++ b/Mediabased/foodmemory.html
@@ -39,6 +39,7 @@
 			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a>
                 <ul>
                     <li><a href="../Mediabased/foodmemory.html">Food memory</a></li>
+					<li><a href="../Mediabased/kinfeasting.html">Kin Feasting</a> </li>
                 </ul>
             </li>
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
@@ -51,11 +52,18 @@
 	</div>	
 
 	<div class="about">
-		<div class="writingfront">
-			<span style="background-color:rgb(60, 255, 0)" >
-			Incompletely released.<br />
-			不完全发布。</span> 
-            <iframe width="660px" height="400px" src="https://www.youtube.com/embed/0_395VgwDBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<div class="container">
+			<span  ><strong>
+			 Food Memory</strong><br />
+			 Feb. 2022
+			</span><br />
+			<p>We usually memorising food by their taste and smell, therefore one can easily distinguish which is bread and which is apple. This kind of distinguishing is very easy, and we learned those food’s attributes from very early of our childhood by simply just one bite, then the gustatory nerves would be activated, our brains will therefore memorising these foods’ flavours. By these complex operation structures works, our brains then can transfer an information so that to tell our body that a specific food that we want to eat at a specific time easily. And then this could be a true exemplary of a reason that why am I want to eat udon noddle on Monday, and want to eat curry chicken rice on Tuesday; or why am I want to eat an egg at the morning and a cup of milk before go to bed at the night. </p><br />
+            <p>In addition, if we memorising food according to its sound, would it have a better appetiser desire for a specific kind of food? I still remember I used to eat apple that my mother asked me to take to the school when having the class sneakingly, although I hided my face and the smell of that apple was not that strong enough to be smelled by everyone in the class. The sound of the first bite of apple was extremely clear that not only people around noticed, but also teacher on the stage. Therefore on this aspect, one can assume that food got its own sound, but it probably need external helpers to cooperated in order to make sound. And I think that when food is working (which is on the process of be eaten no matter by human’s month or animals’ month), that is its own’s sound. So, undoubtedly I was kicked out of the classroom until I finished that apple, because it was too loud and it was somehow quite disturbing the teaching. </p><br />
+			<p>Speaking of the sound of chewing, many people think that it is not a polite behaviour if when a person is eating and he makes a very loud sound of chewing at the same time. The older believes this might have no matter good or bad influences for people’s appetiser who sitting in the same table. To some extent, the sound of chewing indeed have an effect on the way our human brains perceive food. </p><br />
+			<p>Therefore, I want to make a project that is relate to the sound from foods. Although we always remember those foods by the ways of optical, gustatory and olfactory, I want to a way that we can listen to the food, to record the special sounds that made between the saliva and pulverised food, between the process of chewing and swallowing. Which is so called Food memory. </p> <br />
+			<strong>Process</strong>
+			<p>Four channels videos, by filming three kinds of foods eaten by actor, to showcase three different sound of those specific foods: apple, bread, sparking water and chips respectively. But the original sound of food will be covered by its different kind. For example, the sound of video of eating apple would be replaced by eating chips, and the sound of video of eating chips would be replaced by eating bread. Therefore, there will be some misunderstandings between the matching of food and its sound, then the disorder and confusion will be arose, try to find out if audiences would get this confusion or not.</p><br />
+			<iframe width="660px" height="400px" src="https://www.youtube.com/embed/0_395VgwDBg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 	</div>
 	</div>
 	
