--- a/Mediabased/kinfeasting.html
+++ b/Mediabased/kinfeasting.html
@@ -53,34 +53,36 @@
 
 	<div class="about">
 		<div class="container">
-			<span  ><strong>
-			 Kin Feasting</strong><br />
+			<p><span  ><strong>
+			 Kin Feasting</strong> | Multimedia-Performance<br />
 			 Nov. 2021
-			</span><br />
-			<p>Humans are becoming more and more robotic with the development of the technology of this world, and forgetting to sense or feel things around them, living like empty souls inside of their shell. Capitalism plays a very important role in our concept, humans working all day long to produce things and they use the money that they earn from working to buy things produced by themselves.</p><br />
-			<p>We intended to create a feast, which can somehow be assumed as a one-day festival which showcases some symbolic phenomenons together with the movement change of the alienated humans. Some lucky alienated humans have a special opportunity to experience themselves with rich emotions and feelings as their ancestors did hundreds years ago on that feast.</p><br />
-			<p>Starting with they ingest a red pill, which can be regarded as a bottom to trigger the start of this story, and the red moon starts to rise up. Continuing with this, they start to have stronger senses not only on gustation, vision, tactus, but also their mental aspects such as emotions, affection of family, friends, lovers. As it starts, they want to experience more and to build deeper connections by eating food crazily, eye contact, touching, kissing each other and so on. As the red moon goes higher, the delicate relationship between them is becoming stronger, closer and deeper. Until the red moon reaches the peak point, which is also the same time that those humans fulfill their souls and spirits contentedly. After that they start to calm themselves down, lying on the floor and falling into sleep. When the next day comes, they return to what they were at the beginning, alienated and robotic humans, the memories of the feast are forgotten as it should be.</p><br />
-			
+			</span></p><br /><br />
+			<p>Humans are becoming more and more robotic with the development of the technology of this world, and forgetting to sense or feel things around them, living like empty souls inside of their shell. Capitalism plays a very important role in our concept, humans working all day long to produce things and they use the money that they earn from working to buy things produced by themselves.<br /><br />
+			We intended to create a feast, which can somehow be assumed as a one-day festival which showcases some symbolic phenomenons together with the movement change of the alienated humans. Some lucky alienated humans have a special opportunity to experience themselves with rich emotions and feelings as their ancestors did hundreds years ago on that feast.<br /><br />
+			Starting with they ingest a red pill, which can be regarded as a bottom to trigger the start of this story, and the red moon starts to rise up. Continuing with this, they start to have stronger senses not only on gustation, vision, tactus, but also their mental aspects such as emotions, affection of family, friends, lovers. As it starts, they want to experience more and to build deeper connections by eating food crazily, eye contact, touching, kissing each other and so on. As the red moon goes higher, the delicate relationship between them is becoming stronger, closer and deeper. Until the red moon reaches the peak point, which is also the same time that those humans fulfill their souls and spirits contentedly. After that they start to calm themselves down, lying on the floor and falling into sleep. When the next day comes, they return to what they were at the beginning, alienated and robotic humans, the memories of the feast are forgotten as it should be.<br /><br />
+			</p><br />
 			<iframe width="660px" height="400px" src="https://www.youtube.com/embed/ce82DSAXMhw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	<br /><br /><br /><br /><br /><br /><br /><br />
 			
+			<strong>Responsibility</strong><br />
+			Casting: 
+			<a href="">Kapoglou Tanja</a>,
+			<a href="https://www.instagram.com/termagay/">Varveri Tanya</a>, 
+			<a href="https://www.instagram.com/belledlbrt/">Weronika Przysada</a>, 
+			Karlotta Mix, 
+			<a href="https://www.instagram.com/to_lipos/">Nikolas Pachtitis</a><br />
+			Sound: Varveri Tanya<br />
+			Storyboard: Kapoglou Tanja<br />
+			Editing: Varveri Tanya, (Background pattern: Kapoglou Tanja, Gan Lu)<br />
+			Shooting: Gan Lu<br />
+			Installation: Kapoglou Tanja, Varveri Tanya, Gan Lu <br />
+			<br />
 			<strong>Reference</strong><br />
 			1. Haraway, Donna Jeanne. The Companion Species Manifesto: Dogs, People, and Significant Otherness. Chicago, Ill. : Bristol :Prickly Paradigm; University Presses Marketing, 2003.<br />
 			2. <a href="https://youtu.be/KhfwWH4vgZc">Kin Baby</a><br />
 			3. Kubrick, Stanley, and Arthur C. Clarke. 2001: A Space Odyssey. United States: Metro-Goldwyn-Mayer Corp, 1968.<br />
 			4. Klein, Allen, Robert Taicher, Alejandro Jodorowsky, Horacio Salinas, Ramona Saunders, Juan Ferrara, Adriana Page, Nicky Nichols, Ana . Sade, Héctor Ortega, Rafael Corkidi, Ronald Frangipane, Don Cherry, Federico Landeros, and Joanne Pottlitzer. Alexandro Jodorowsky's the Holy Mountain. 2007.<br />
 			<br />
-			<strong>Responsibility</strong><br />
-			Casting: 
-			<a href="">Kapoglou Tanja</a>,
-			Varveri Tanya, 
-			<a href="https://www.instagram.com/belledlbrt/">Weronika Przysada</a>, 
-			Karlotta Mix, 
-			Nikolas Pachtitis <br />
-			Sound: Varveri Tanya<br />
-			Storyboard: Kapoglou Tanja<br />
-			Editing: Varveri Tanya, (Background pattern: Kapoglou Tanja, Gan Lu)<br />
-			Shooting: Gan Lu<br />
-			Installation: Kapoglou Tanja, Varveri Tanya, Gan Lu <br />
+			
 			<p></p><br />
 			<p></p><br />
 			<p></p><br />
