--- a/Mediabased/foodmemory.html
+++ b/Mediabased/foodmemory.html
@@ -39,6 +39,7 @@
 			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a>
                 <ul>
                     <li><a href="../Mediabased/foodmemory.html">Food memory</a></li>
+					<li><a href="../Mediabased/liberatedfish.html"></a>Liberated Fish</li>
 					<li><a href="../Mediabased/kinfeasting.html">Kin Feasting</a> </li>
                 </ul>
             </li>
