--- a/index-mediabased.html
+++ b/index-mediabased.html
@@ -39,6 +39,8 @@
 			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a>
                 <ul>
                     <li><a href="../forganlu.github.io/Mediabased/foodmemory.html">Food memory</a></li>
+					<li><a href="../forganlu.github.io/Mediabased/liberatedfish.html"></a>Liberated Fish</li>
+					<li><a href="../forganlu.github.io/Mediabased/kinfeasting.html"></a>Kin Feasting</li>
                 </ul>
             </li>
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
