--- a/Mediabased/liberatedfish.html
+++ b/Mediabased/liberatedfish.html
@@ -39,7 +39,7 @@
 			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a>
                 <ul>
                     <li><a href="../Mediabased/foodmemory.html">Food memory</a></li>
-					<li><a href="../Mediabased/liberatedfish.html"></a>liberated Fish</li>
+					<li><a href="../Mediabased/liberatedfish.html">liberated Fish</a></li>
 					<li><a href="../Mediabased/kinfeasting.html">Kin Feasting</a> </li>
 					
                 </ul>
@@ -66,13 +66,9 @@
 				Then what else do you expect from them?<br /><br />
 				Expecting be protected. I don't care how dose my flash taste at the end, either care in what way they will cook me, because I do know I will be a delicious dish at the end. But I hope before that, they should admit that they need us. We are still noble after such a long time, not because our brain is small, but because we don't care too much about freedom. Caring too much instead just pushes themselves into more savagery place.<br/><br />
 			</p><br />
-			<iframe src="https://player.vimeo.com/video/651509101?h=4bc708767b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="660" height="371" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="liberated fish"></iframe><br />
-			
-			<br />
+			<iframe src="https://player.vimeo.com/video/651509101?h=4bc708767b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="660" height="371" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="liberated fish"></iframe><br /><br />
 			<strong>Reference</strong><br />
 			1. Lovett, F. (2015). Freedom Is Power: Liberty Through Political Representation. By Lawrence Hamilton. Cambridge: Cambridge University Press, 2014, 231p. Perspectives on Politics, 13(2), 515-516. doi:10.1017/S1537592715000584<br />
-			
-
 			<br />
 			
 			<p></p><br />
