--- a/index-about.html
+++ b/index-about.html
@@ -55,12 +55,11 @@
 		<span style="background-color:white" >
 			<strong>GAN LU / 甘 露</strong><br />
 			<br />
-			Born 1998, China.<br />
-			Based on Guangzhou / Hong Kong<br />
+			b.1998, China.<br />
+			Hong Kong based<br />
 			<br />
-			BFA - 5th Studio of Oil Painting Department of Guangzhou Academic of Fine Art<br />
-			MFA - Creative Media of City University of Hong Kong<br />
-			Hong Kong - Switzerland exchange programme - Athens, Greece<br />
+			Guangzhou Academic of Fine Art<br />
+			SCM Hong Kong - ZHdK Switzerland transcultural collaboration exchange programme - Athens, Greece<br />
 			<br />
 			<br />
 			<br />
