--- a/Mediabased/liberatedfish.html
+++ b/Mediabased/liberatedfish.html
@@ -56,7 +56,7 @@
 	<div class="about">
 		<div class="container">
 			<p></p><span  ><strong>
-			 Liberated Fish</strong> | Video<br />
+			 Liberated Fish</strong> | Video & Photography<br />
 			 Dec. 2021
 			</span></p><br /><br />
 			<strong>Line</strong>
@@ -66,7 +66,13 @@
 				Then what else do you expect from them?<br /><br />
 				Expecting be protected. I don't care how dose my flash taste at the end, either care in what way they will cook me, because I do know I will be a delicious dish at the end. But I hope before that, they should admit that they need us. We are still noble after such a long time, not because our brain is small, but because we don't care too much about freedom. Caring too much instead just pushes themselves into more savagery place.<br/><br />
 			</p><br />
-			<iframe src="https://player.vimeo.com/video/651509101?h=4bc708767b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="660" height="371" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="liberated fish"></iframe><br /><br />
+			<p><strong>Video</strong></p><br /><br />
+			<p><iframe src="https://player.vimeo.com/video/651509101?h=4bc708767b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="660" height="371" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="liberated fish"></iframe></p><br /><br />
+			<p><strong>Photography</strong></p><br /><br />
+			<img src="../image/mediabased/liberatedfish/lf-1.JPG" alt=""width="660px"><p>&nbsp;</p>
+			<img src="../image/mediabased/liberatedfish/lf-2.JPG" alt=""width="660px"><p>&nbsp;</p>
+			<img src="../image/mediabased/liberatedfish/lf-3.JPG" alt=""width="660px"><p>&nbsp;</p>
+			<img src="../image/mediabased/liberatedfish/lf-4.JPG" alt=""width="660px"><p>&nbsp;</p>
 			<strong>Reference</strong><br />
 			1. Lovett, F. (2015). Freedom Is Power: Liberty Through Political Representation. By Lawrence Hamilton. Cambridge: Cambridge University Press, 2014, 231p. Perspectives on Politics, 13(2), 515-516. doi:10.1017/S1537592715000584<br />
 			2. <a href="http://marialoizidou.com/#/?o=1">A Monumental Lightness</a> by Maria Loizidou
