--- a/Mediabased/kinfeasting.html
+++ b/Mediabased/kinfeasting.html
@@ -15,7 +15,7 @@
 <div class="birdlogo"> 
 	<figure>
 		<div class="img-area">
-			<a href="index.html">
+			<a href="../index.html">
 				<img src="../forganlu.github.io/image/logo1.png" alt="" class="img-back">
 				<img src="../forganlu.github.io/image/logo2.png" alt="" class="img-front">
 			</a>
@@ -63,6 +63,10 @@
 			Starting with they ingest a red pill, which can be regarded as a bottom to trigger the start of this story, and the red moon starts to rise up. Continuing with this, they start to have stronger senses not only on gustation, vision, tactus, but also their mental aspects such as emotions, affection of family, friends, lovers. As it starts, they want to experience more and to build deeper connections by eating food crazily, eye contact, touching, kissing each other and so on. As the red moon goes higher, the delicate relationship between them is becoming stronger, closer and deeper. Until the red moon reaches the peak point, which is also the same time that those humans fulfill their souls and spirits contentedly. After that they start to calm themselves down, lying on the floor and falling into sleep. When the next day comes, they return to what they were at the beginning, alienated and robotic humans, the memories of the feast are forgotten as it should be.<br /><br />
 			</p><br />
 			<iframe width="660px" height="400px" src="https://www.youtube.com/embed/ce82DSAXMhw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	<br /><br />
+			<p><strong>Progress</strong></p><br /><br />
+			<img src="" alt=""width="660px"><p>&nbsp;</p>
+
+
 			<strong>Responsibility</strong><br />
 			Casting: 
 			<a href="">Kapoglou Tanja</a>,
