--- a/Mediabased/liberatedfish.html
+++ b/Mediabased/liberatedfish.html
@@ -15,7 +15,7 @@
 <div class="birdlogo"> 
 	<figure>
 		<div class="img-area">
-			<a href="index.html">
+			<a href="../index.html">
 				<img src="../forganlu.github.io/image/logo1.png" alt="" class="img-back">
 				<img src="../forganlu.github.io/image/logo2.png" alt="" class="img-front">
 			</a>
