--- a/index-about.html
+++ b/index-about.html
@@ -58,7 +58,7 @@
 			b.1998, China.<br />
 			Hong Kong based<br />
 			<br />
-			Guangzhou Academic of Fine Art<br />
+			Guangzhou Academic of Fine Art - Oil Painting<br />
 			SCM Hong Kong - ZHdK Switzerland transcultural collaboration exchange programme - Athens, Greece<br />
 			<br />
 			<br />
