--- a/index-contact.html
+++ b/index-contact.html
@@ -56,7 +56,7 @@
 			<!--Website: <span style="background-color:rgb(255, 255, 255)" ><a href="../forganlu.github.io/index.html"><strong>www.forganlu.com</strong></a></span><br />-->
 			Email: <span style="background-color:rgb(255, 255, 255)" ><a href="mailto:ganlu2525@outlook.com"> <strong>ganlu2525@outlook.com</strong></a></span><br />
 			Instagram: <span style="background-color:rgb(255, 255, 255)" ><a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></a></span><br />
-			Behance.net/<span style="background-color:rgb(255, 255, 255)" ><a href="https://www.behance.net/ganlu2525"><strong>ganlu2525</strong></a></span>
+			Behance.net/<span style="background-color:rgb(255, 255, 255)" ><a href="https://www.behance.net/ganlu2525"><strong>ganlu2525</strong></a></span><br />
 			WeChat: <span style="background-color:rgb(255, 255, 255)" ><a href="../forganlu.github.io/index-contact-wechat.html"><strong>ganlu2525</strong></a></span>
 		
 	</p>
