--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 	<div class="about">
 		<div class="writingfront">
 			<p>
-				<span style="background-color:rgb(60, 255, 0)" ><strong> Currently no news.</strong><br />
+				<span style="background-color:rgb(60, 255, 0)" ><strong> Currently no news.</strong></span><br />
+				Media-based projects was updated.<br />
 				
-				</span>
 
 			</p>
 		</div>
