--- a/Mediabased/liberatedfish.html
+++ b/Mediabased/liberatedfish.html
@@ -68,11 +68,11 @@
 			</p><br />
 			<p><strong>Video</strong></p><br /><br />
 			<p><iframe src="https://player.vimeo.com/video/651509101?h=4bc708767b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="660" height="371" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="liberated fish"></iframe></p><br /><br />
-			<p><strong>Photography</strong></p><br /><br />
+			<!--<p><strong>Photography</strong></p><br /><br />
 			<img src="../image/mediabased/liberatedfish/lf-1.jpg" alt=""><p>&nbsp;</p>
 			<img src="../image/mediabased/liberatedfish/lf-2.jpg" alt=""><p>&nbsp;</p>
 			<img src="../image/mediabased/liberatedfish/lf-3.jpg" alt=""><p>&nbsp;</p>
-			<img src="../image/mediabased/liberatedfish/lf-4.jpg" alt=""><p>&nbsp;</p>
+			<img src="../image/mediabased/liberatedfish/lf-4.jpg" alt=""><p>&nbsp;</p>-->
 			
 			<strong>Reference</strong><br />
 			1. Lovett, F. (2015). Freedom Is Power: Liberty Through Political Representation. By Lawrence Hamilton. Cambridge: Cambridge University Press, 2014, 231p. Perspectives on Politics, 13(2), 515-516. doi:10.1017/S1537592715000584<br />
