--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 	
 
 	<div class="about">
-		<div class="writingfront">
+		<div class="container">
 			<p>
-				<span style="background-color:rgb(60, 255, 0)" ><strong> Currently no news.</strong></span><br />
-				Media-based projects was updated.<br />
+				<span style="background-color:rgb(60, 255, 0)" ><strong> Currently no news. and Media-based projects was updated.</strong></span><br />
+				<img src="../forganlu.github.io/image/IMG_9749.png" alt=""><p>&nbsp;</p>
 				
 
 			</p>
