--- a/painting/TheDeathofBajkal.html
+++ b/painting/TheDeathofBajkal.html
@@ -46,7 +46,7 @@
 						<li><a href="../forganlu.github.io/painting/Backup.html">Back Up</a></li>
 						<li><a href="../forganlu.github.io/painting/TheDeathofBajkal.html">The Death of Bajkal</a></li>
 						<li><a href="../forganlu.github.io/painting/EatingGoldfish.html">Eating Goldfish</a></li>
-						<li><a href="../forganlu.github.io/painting/Treasures.html">Treasures</a></li>
+						
 					</ul>	
 				
 			</li>
@@ -60,30 +60,140 @@
 	<div class="about">
 		<div class="container">
 			<span style="background-color:rgb(255, 255, 255)" >
-			<br />
-			<br /></span>
+			<p><strong>The Death of Bajkal</strong><br />
+				GAFA graduation project<br />
+			April,2020</p><br /><br />
+			<p><strong>Description</strong><br /><br />
+				<strong>Children-kind simple strokes</strong><br />
+				This painting technique has been running through my four years of painting, and I use it in my works from time to time. This method of painting is not new to most people, and it was indeed when I was young, when I was sent to painting classes to learn how to paint. Therefore, there is a kind of painting method that is basically the simplest and most basic for all kinds of objects, and only uses lines to describe, and then teach it to children. This simple and easy-to-understand way of painting has a deep memory in my upbringing and has a profound impact on my perspective on art. Therefore, this method was naturally used in this graduation creation.<br /><br />
+				<strong>the death of Bajkal</strong><br />
+				I have mentioned this text in my graduation thesis, and I wrote down the feelings of others. Later, through long-term writing, I can now use this method to write down some ideas. I intend to use these words as a background for a graduation creation, and use multi-dimensional methods to visually express it in the creation. Whether it is from the text itself or the overall feeling it gives, it is a direct visual effect that can be easily seen by people. I hope that it can give readers an intuitive feeling, and I hope that readers can understand the creative background of paintings.<br /><br />
+				<strong>digital collages</strong><br />
+				From collecting materials to operating collage is a long process. Images are easy to find on the Internet. And my eyes have a process of integrating the images. This process is to store information in the brain, and the brain begins to filter the information and then output it. It is made into a collection by eyes and hands, plus my own aesthetic system. So each piece is independent, not as a series of works. It's my feedback on pictures on the internet.<br />
+			</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-1.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-2.JPG" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-3.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-4.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-5.JPG" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-6.JPG" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-7.JPG" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-8.JPG" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-9.JPG" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-10.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-11.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-12.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-13.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-14.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-15.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-16.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-17.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-18.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-19.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-1.jpg" alt="">
+			<p style="text-align:right">
+				<strong>Series-3</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-2.JPG" alt="">
+			<p style="text-align:right">
+				<strong>Series-1</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				sold<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-3.jpg" alt="">
+			<p style="text-align:right">
+				<strong>Series-2</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				sold<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-4.jpg" alt="">
+			<p style="text-align:right"><strong>Untitled</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-5.JPG" alt="">
+			<p style="text-align:right"><strong>Bajkal sitting beside the window</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				sold<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-6.JPG" alt="">
+			<p style="text-align:right"><strong>雜誌社-2</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-7.JPG" alt="">
+			<p style="text-align:right"><strong>雜誌社-1</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-8.JPG" alt="">
+			<p style="text-align:right"><strong>雜誌社-3</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-9.JPG" alt="">
+			<p style="text-align:right"><strong>選擇困難</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-10.jpg" alt="">
+			<p style="text-align:right"><strong>鞋套</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-11.jpg" alt="">
+			<p style="text-align:right"><strong>Bajkal-1</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-12.jpg" alt="">
+			<p style="text-align:right"><strong>Bajkal's hands</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-13.jpg" alt="">
+			<p style="text-align:right"><strong>Bajkal's gloves</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-14.jpg" alt="">
+			<p style="text-align:right"><strong>Bajkal's cup</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-15.jpg" alt="">
+			<p style="text-align:right"><strong>Bajkal-2</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-16.jpg" alt="">
+			<p style="text-align:right"><strong>Bajkal-3</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-17.jpg" alt="">
+			<p style="text-align:right"><strong>Bajkal's big tree</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-18.jpg" alt="">
+			<p style="text-align:right"><strong>每一分鐘都要小心</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/the Death of BAJKAL/bajkal-19.jpg" alt="">
+			<p style="text-align:right"><strong>Bajkal beside the bed</strong><br />
+				Mixed materials and digital collage on canvas<br />
+				90cm x 70cm<br />
+				</p>
+			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			
 			
 			
