--- a/painting/TheDeathofBajkal.html
+++ b/painting/TheDeathofBajkal.html
@@ -60,9 +60,9 @@
 	<div class="about">
 		<div class="container">
 			<span style="background-color:rgb(255, 255, 255)" >
-			<p><strong>The Death of Bajkal</strong><br />
-				GAFA graduation project<br />
-			April,2020</p><br /><br />
+			<p><strong>The Death of Bajkal | 馬鹿之死</strong><br />
+				GAFA graduation project ｜ GAFA畢業創作<br />
+			April, 2020</p><br /><br />
 			<p><strong>Description</strong><br /><br />
 				<strong>Children-kind simple strokes</strong><br />
 				This painting technique has been running through my four years of painting, and I use it in my works from time to time. This method of painting is not new to most people, and it was indeed when I was young, when I was sent to painting classes to learn how to paint. Therefore, there is a kind of painting method that is basically the simplest and most basic for all kinds of objects, and only uses lines to describe, and then teach it to children. This simple and easy-to-understand way of painting has a deep memory in my upbringing and has a profound impact on my perspective on art. Therefore, this method was naturally used in this graduation creation.<br /><br />
@@ -71,6 +71,24 @@
 				<strong>digital collages</strong><br />
 				From collecting materials to operating collage is a long process. Images are easy to find on the Internet. And my eyes have a process of integrating the images. This process is to store information in the brain, and the brain begins to filter the information and then output it. It is made into a collection by eyes and hands, plus my own aesthetic system. So each piece is independent, not as a series of works. It's my feedback on pictures on the internet.<br />
 			</p>
+			<p>&nbsp;</p><p>&nbsp;</p>
+			<p>
+				<strong>創作構思</strong><br /><br />
+				<strong>兒童簡筆畫</strong><br />
+				这种绘画手法一直贯穿在我四年的绘画中，我时不时在作品中会用到这样的手法。这种绘画手法对于大部分人来说并不陌生，且在我接触到它确实是在我小时候，是在我被送到绘画班学习绘画的时候。于是社会上因此就有一种对各种物体有基本上是最简单的，最基础的，只用线条来描绘的画法，然后将其教授给小朋友。这种简单易理解的绘画方式在我的成长中记忆深刻，在我对待艺术的观点上有很深刻的影响。因此在这次的毕业创作中就很自然的用到了这样的手法。<br /><br />
+				<strong>《馬鹿之死》</strong><br />
+				我将别人的感受写下来。后来通过长期的写作现在能够用这种手段写下一些想法，我打算把这些文字当成一个毕业创作的一个背景，在创作中运用多维的方式从视觉上表现。不论是从文字本身还是它给人的整体感受，都是一种直接的，能够容易被人看到一种视觉效果。我希望从中能够给读者一种直观的感受，也希望读者能够从中了解绘画的创作背景。<br /><br />
+				<strong>數碼拼貼</strong><br />
+				从搜集素材到操作拼贴是漫长的过程。图像在互联网上很容易找到，眼睛对图像有一个整合的过程，这个过程是将信息存在脑子里，脑子开始过滤信息，然后再输出。由眼睛和手，加上自己的审美体系，将它做成一个集合体。所以每一张都是独立的，不作为系列作品。是我对网络图片的一种反馈。<br />
+			</p>
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p style="text-align:right">
+				<strong>Exhibited | 展覽於</strong><br />
+				GAFA museum main page ｜ GAFA2020畢業展<br />
+				OCAT Shenzhen OCT Harbour Exhibition Site (Boxes Art Space) | 深圳盒子藝術空間<br />
+				Da Vinci Talk - Te Kauhanganui o QBE Gallery ｜ 達芬奇對話<br />
+				</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
