--- a/painting/EatingGoldfish.html
+++ b/painting/EatingGoldfish.html
@@ -38,15 +38,14 @@
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a>
 				
 					<ul >
-						<li ><a href="../forganlu.github.io/painting/fieldtrip.html">Field trip</a></li>
-						<li><a href="../forganlu.github.io/painting/iloveyou.html">I love you</a></li>
-						<li><a href="../forganlu.github.io/painting/Meandpoliceman.html">Me and policeman</a></li>	
-						<li><a href="../forganlu.github.io/painting/Howtodealwithmylife.html">How to deal with my life</a></li>
-						<li><a href="../forganlu.github.io/painting/Sketch.html">Sketch</a></li>	
-						<li><a href="../forganlu.github.io/painting/Collage.html">Collage</a></li>
-						<li><a href="../forganlu.github.io/painting/Backup.html">Back Up</a></li>
-						<li><a href="../forganlu.github.io/painting/TheDeathofBajkal.html">The Death of Bajkal</a></li>
 						<li><a href="../forganlu.github.io/painting/EatingGoldfish.html">Eating Goldfish</a></li>
+						<li><a href="../forganlu.github.io/painting/TheDeathofBajkal.html">The Death of Bajkal</a></li>
+						<li><a href="../forganlu.github.io/painting/Collage.html">Collage</a></li>
+						<li><a href="../forganlu.github.io/painting/Howtodealwithmylife.html">How to deal with my life</a></li>
+						<li><a href="../forganlu.github.io/painting/iloveyou.html">I love you</a></li>
+						<li><a href="../forganlu.github.io/painting/Sketch.html">Sketch practice</a></li>	
+						<li><a href="../forganlu.github.io/painting/Meandpoliceman.html">Me and policeman</a></li>
+						<li ><a href="../forganlu.github.io/painting/fieldtrip.html">Field trip practice</a></li>
 					</ul>	
 				
 			</li>
