--- a/Mediabased/kinfeasting.html
+++ b/Mediabased/kinfeasting.html
@@ -41,6 +41,7 @@
                     <li><a href="../Mediabased/foodmemory.html">Food memory</a></li>
 					<li><a href="../Mediabased/liberatedfish.html">Liberated Fish</a></li>
 					<li><a href="../Mediabased/kinfeasting.html">Kin Feasting</a> </li>
+					<li><a href="../Mediabased/ARFOW.html"></a>A Room for One's Own</li>
                 </ul>
             </li>
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
@@ -56,6 +57,7 @@
 		<div class="container">
 			<p><span  ><strong>
 			 Kin Feasting</strong> | Multimedia-Performance<br />
+			 One Minute Space (Athens, GR)<br/>
 			 Nov. 2021
 			</span></p><br /><br />
 			<p>
