--- a/index-mediabased.html
+++ b/index-mediabased.html
@@ -41,6 +41,7 @@
                     <li><a href="../forganlu.github.io/Mediabased/foodmemory.html">Food memory</a></li>
 					<li><a href="../forganlu.github.io/Mediabased/liberatedfish.html">Liberated Fish</a></li>
 					<li><a href="../forganlu.github.io/Mediabased/kinfeasting.html">Kin Feasting</a></li>
+					<li><a href="../forganlu.github.io/Mediabased/ARFOW.html">A Room for One's Own</a></li>
                 </ul>
             </li>
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
