--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
 	
 
 	<div class="about">
-		<div class="container">
+		<div class="writingfront">
 			<p>
-				<span style="background-color:rgb(60, 255, 0)" ><strong> Currently no news. and Media-based projects was updated.</strong></span><br />
-				<img src="../forganlu.github.io/image/IMG_9749.png" alt=""><p>&nbsp;</p>
+				<span style="background-color:rgb(60, 255, 0)" ><strong> Currently no news. and <a href="../forganlu.github.io/index-mediabased.html">Media-based</a> projects was updated.</strong> (Mar. 2022)</span><br />
 				
-
 			</p>
+		</div>
+		<div class="container"><p>&nbsp;</p>
+			<img src="../forganlu.github.io/image/IMG_9749.png" alt=""><p>&nbsp;</p>
 		</div>
 	</div>
 	
