--- a/Mediabased/liberatedfish.html
+++ b/Mediabased/liberatedfish.html
@@ -42,6 +42,7 @@
 					<li><a href="../Mediabased/liberatedfish.html">liberated Fish</a></li>
 					<li><a href="../Mediabased/kinfeasting.html">Kin Feasting</a> </li>
 					<li><a href="../Mediabased/ARFOW.html">A Room for One's Own</a></li>
+					<li><a href="../Mediabased/ritzsdream.html">Ritz's Dream</a></li>
 					
                 </ul>
             </li>
