--- a/index-mediabased.html
+++ b/index-mediabased.html
@@ -42,6 +42,7 @@
 					<li><a href="../forganlu.github.io/Mediabased/liberatedfish.html">Liberated Fish</a></li>
 					<li><a href="../forganlu.github.io/Mediabased/kinfeasting.html">Kin Feasting</a></li>
 					<li><a href="../forganlu.github.io/Mediabased/ARFOW.html">A Room for One's Own</a></li>
+					<li><a href="../forganlu.github.io/Mediabased/ritzsdream.html">Ritz's Dream</a></li>
                 </ul>
             </li>
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
