--- a/Mediabased/ritzsdream.html
+++ b/Mediabased/ritzsdream.html
@@ -70,8 +70,7 @@
 			
 			<iframe src="https://player.vimeo.com/video/304739598?h=5f9062c66e&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="660" height="371" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Ritz&amp;#039;s Dream"></iframe><br/><br/>
 			<img src="../image/photograph/Ritz's Dream/ritzsdream-1.JPG" alt="" width="660px"><p>&nbsp;</p>
-			<img src="../image/photograph/Ritz's Dream/ritzsdream-2.JPG" alt="" width="660px"><p>&nbsp;</p>
-			<img src="../image/photograph/Ritz's Dream/ritzsdream-3.JPG" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/Ritz's Dream/ritzsdream-2.JPG" alt="" width="330px"><img src="../image/photograph/Ritz's Dream/ritzsdream-3.JPG" alt="" width="330px"><p>&nbsp;</p>
 			<img src="../image/photograph/Ritz's Dream/ritzsdream-4.JPG" alt="" width="660px"><p>&nbsp;</p>
 			<img src="../image/photograph/Ritz's Dream/ritzsdream-5.JPG" alt="" width="660px"><p>&nbsp;</p>
 			<img src="../image/photograph/Ritz's Dream/ritzsdream-6.JPG" alt="" width="660px">
