--- a/painting/Howtodealwithmylife.html
+++ b/painting/Howtodealwithmylife.html
@@ -58,18 +58,22 @@
 	</div>	
 	<div class="about">
 		<div class="container">
-			<span style="background-color:rgb(255, 255, 255)" >
-			<br />
-			<br /></span>
+			<p>
+				<strong>How to deal with my life</strong> | Physical collages<br/>
+				Mar. 2019<br/>
+				Daily collages practice
+			</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<img src="../image/painting/how to deal with my life/how to deal with my life-1.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/how to deal with my life/how to deal with my life-2.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/how to deal with my life/how to deal with my life-3.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/how to deal with my life/how to deal with my life-4.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/how to deal with my life/how to deal with my life-5.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/how to deal with my life/how to deal with my life-6.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/how to deal with my life/how to deal with my life-1.jpg" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/painting/how to deal with my life/how to deal with my life-2.jpg" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/painting/how to deal with my life/how to deal with my life-3.jpg" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/painting/how to deal with my life/how to deal with my life-4.jpg" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/painting/how to deal with my life/how to deal with my life-5.jpg" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/painting/how to deal with my life/how to deal with my life-6.jpg" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/painting/how to deal with my life/how to deal with my life-7.jpg" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/painting/how to deal with my life/how to deal with my life-8.jpg" alt="" width="660px"><p>&nbsp;</p>
 			
 		</div>
 			
