--- a/painting/TheDeathofBajkal.html
+++ b/painting/TheDeathofBajkal.html
@@ -106,7 +106,7 @@
 				sold<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-3.jpg" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-3.jpg" alt=""width="660px">
 			<p style="text-align:right">
 				<strong>Series-2</strong><br />
 				Mixed materials and digital collage on canvas<br />
@@ -114,98 +114,98 @@
 				sold<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-4.jpg" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-4.jpg" alt=""width="660px">
 			<p style="text-align:right"><strong>Untitled</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-5.JPG" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-5.JPG" alt=""width="660px">
 			<p style="text-align:right"><strong>Bajkal sitting beside the window</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				sold<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-6.JPG" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-6.JPG" alt=""width="660px">
 			<p style="text-align:right"><strong>雜誌社-2</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-7.JPG" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-7.JPG" alt=""width="660px">
 			<p style="text-align:right"><strong>雜誌社-1</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-8.JPG" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-8.JPG" alt=""width="660px">
 			<p style="text-align:right"><strong>雜誌社-3</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-9.JPG" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-9.JPG" alt=""width="660px">
 			<p style="text-align:right"><strong>選擇困難</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-10.jpg" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-10.jpg" alt=""width="660px">
 			<p style="text-align:right"><strong>鞋套</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-11.jpg" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-11.jpg" alt=""width="660px">
 			<p style="text-align:right"><strong>Bajkal-1</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-12.jpg" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-12.jpg" alt=""width="660px">
 			<p style="text-align:right"><strong>Bajkal's hands</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-13.jpg" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-13.jpg" alt=""width="660px">
 			<p style="text-align:right"><strong>Bajkal's gloves</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-14.jpg" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-14.jpg" alt=""width="660px">
 			<p style="text-align:right"><strong>Bajkal's cup</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-15.jpg" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-15.jpg" alt=""width="660px">
 			<p style="text-align:right"><strong>Bajkal-2</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-16.jpg" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-16.jpg" alt=""width="660px">
 			<p style="text-align:right"><strong>Bajkal-3</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-17.jpg" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-17.jpg" alt=""width="660px">
 			<p style="text-align:right"><strong>Bajkal's big tree</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-18.jpg" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-18.jpg" alt=""width="660px">
 			<p style="text-align:right"><strong>每一分鐘都要小心</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/the Death of BAJKAL/bajkal-19.jpg" alt="">
+			<img src="../image/painting/the Death of BAJKAL/bajkal-19.jpg" alt=""width="660px">
 			<p style="text-align:right"><strong>Bajkal beside the bed</strong><br />
 				Mixed materials and digital collage on canvas<br />
 				90cm x 70cm<br />
