--- a/painting/Collage.html
+++ b/painting/Collage.html
@@ -59,7 +59,8 @@
 	<div class="about">
 		<div class="container">
 			<p>
-				<strong>Collage</strong> | practical & digital collage
+				<strong>Collage</strong> | practical & digital collage<br/>
+				Mar. 2019
 			</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
