--- a/index-photography.html
+++ b/index-photography.html
@@ -38,13 +38,12 @@
 				<ul >
 					<li><a href="../forganlu.github.io/photography/oldman.html">Old Man</a></li>
 					<li><a href="../forganlu.github.io/photography/liquid.html">Liquid</a></li>
-					<li><a href="../forganlu.github.io/photography/ritzsdream.html">Ritz's Dream</a></li>
 					<li><a href="../forganlu.github.io/photography/ontheroad.html">On the Road</a></li>
 					<li><a href="../forganlu.github.io/photography/building.html">Building</a></li>
 					<li><a href="../forganlu.github.io/photography/hardtosay.html">Hard to say</a></li>
 					<li><a href="../forganlu.github.io/photography/polaroidinhk.html">Polaroid in HK</a></li>
-					<li><a href="../forganlu.github.io/photography/groupphoto.html">Group Photo</a></li>
-					<li><a href="../forganlu.github.io/photography/2021bdp.html">2021BDP</a></li>
+					<!--<li><a href="../forganlu.github.io/photography/groupphoto.html">Group Photo</a></li>
+					<li><a href="../forganlu.github.io/photography/2021bdp.html">2021BDP</a></li>-->
 				</ul>
 			</li>
 			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
