--- a/photography/liquid.html
+++ b/photography/liquid.html
@@ -40,13 +40,12 @@
 				<ul >
 					<li><a href="../forganlu.github.io/photography/oldman.html">Old Man</a></li>
 					<li><a href="../forganlu.github.io/photography/liquid.html">Liquid</a></li>
-					<li><a href="../forganlu.github.io/photography/ritzsdream.html">Ritz's Dream</a></li>
 					<li><a href="../forganlu.github.io/photography/ontheroad.html">On the Road</a></li>
 					<li><a href="../forganlu.github.io/photography/building.html">Building</a></li>
 					<li><a href="../forganlu.github.io/photography/hardtosay.html">Hard to say</a></li>
 					<li><a href="../forganlu.github.io/photography/polaroidinhk.html">Polaroid in HK</a></li>
-					<li><a href="../forganlu.github.io/photography/groupphoto.html">Group Photo</a></li>
-					<li><a href="../forganlu.github.io/photography/2021bdp.html">2021BDP</a></li>
+					<!--<li><a href="../forganlu.github.io/photography/groupphoto.html">Group Photo</a></li>
+					<li><a href="../forganlu.github.io/photography/2021bdp.html">2021BDP</a></li>-->
 				</ul>
 			</li>
 			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
@@ -58,9 +57,11 @@
 	</div>	
 	<div class="about">
 		<div class="container">
-			<span style="background-color:rgb(255, 255, 255)" >
-			<br />
-			<br /></span>
+			<p>
+				<strong>Liquid</strong> | black and white film<br/>
+				22rd Apr. 2021<br/>
+			</p><p>&nbsp;</p>
+			我永远没有办法拒绝水、波浪、和在太阳的照射下它闪闪发光的金色反射。它永远值得被单独拿出来欣赏，也不需要任何别的陪衬。<br />
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
