--- a/photography/oldman.html
+++ b/photography/oldman.html
@@ -40,13 +40,12 @@
 				<ul >
 					<li><a href="../forganlu.github.io/photography/oldman.html">Old Man</a></li>
 					<li><a href="../forganlu.github.io/photography/liquid.html">Liquid</a></li>
-					<li><a href="../forganlu.github.io/photography/ritzsdream.html">Ritz's Dream</a></li>
 					<li><a href="../forganlu.github.io/photography/ontheroad.html">On the Road</a></li>
 					<li><a href="../forganlu.github.io/photography/building.html">Building</a></li>
 					<li><a href="../forganlu.github.io/photography/hardtosay.html">Hard to say</a></li>
 					<li><a href="../forganlu.github.io/photography/polaroidinhk.html">Polaroid in HK</a></li>
-					<li><a href="../forganlu.github.io/photography/groupphoto.html">Group Photo</a></li>
-					<li><a href="../forganlu.github.io/photography/2021bdp.html">2021BDP</a></li>
+					<!--<li><a href="../forganlu.github.io/photography/groupphoto.html">Group Photo</a></li>
+					<li><a href="../forganlu.github.io/photography/2021bdp.html">2021BDP</a></li>-->
 				</ul>
 			</li>
 			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
@@ -58,20 +57,23 @@
 	</div>	
 	<div class="about">
 		<div class="container">
-			<span style="background-color:rgb(255, 255, 255)" >
+			<p>
+				<strong>Old Man</strong> | black and white film<br/>
+				Apr. 2019<br/>
+			</p><p>&nbsp;</p>
 			This is where I started.<br />
-			这里是我的初始地。<br /></span>
+			这里是我的初始地。<br />
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-1.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-2.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-3.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-4.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-5.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-6.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-7.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/old man/old man-8.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/old man/old man-1.JPG" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/old man/old man-2.JPG" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/old man/old man-3.JPG" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/old man/old man-4.JPG" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/old man/old man-5.JPG" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/old man/old man-6.JPG" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/old man/old man-7.JPG" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/old man/old man-8.JPG" alt="" width="660px"><p>&nbsp;</p>
 			
 		</div>
 			
