--- a/photography/hardtosay.html
+++ b/photography/hardtosay.html
@@ -40,13 +40,13 @@
 				<ul >
 					<li><a href="../forganlu.github.io/photography/oldman.html">Old Man</a></li>
 					<li><a href="../forganlu.github.io/photography/liquid.html">Liquid</a></li>
-					<li><a href="../forganlu.github.io/photography/ritzsdream.html">Ritz's Dream</a></li>
+
 					<li><a href="../forganlu.github.io/photography/ontheroad.html">On the Road</a></li>
 					<li><a href="../forganlu.github.io/photography/building.html">Building</a></li>
 					<li><a href="../forganlu.github.io/photography/hardtosay.html">Hard to say</a></li>
 					<li><a href="../forganlu.github.io/photography/polaroidinhk.html">Polaroid in HK</a></li>
-					<li><a href="../forganlu.github.io/photography/groupphoto.html">Group Photo</a></li>
-					<li><a href="../forganlu.github.io/photography/2021bdp.html">2021BDP</a></li>
+					<!--<li><a href="../forganlu.github.io/photography/groupphoto.html">Group Photo</a></li>
+					<li><a href="../forganlu.github.io/photography/2021bdp.html">2021BDP</a></li>-->
 				</ul>
 			</li>
 			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
@@ -58,21 +58,22 @@
 	</div>	
 	<div class="about">
 		<div class="container">
-			<span style="background-color:rgb(255, 255, 255)" >
-			<br />
-			<br /></span>
+			<p>
+				<strong>Hard to say</strong> | black and white film<br/>
+				Apr/May. 2021<br/>
+			</p><p>&nbsp;</p>
+			Gray hair, gray sky, gray mountain, but white plastic chair.<br />
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<img src="../image/photograph/hard to say/Hard to say-1.jpg" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/hard to say/Hard to say-2.jpg" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/hard to say/Hard to say-3.jpg" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/hard to say/Hard to say-4.jpg" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/hard to say/Hard to say-5.jpg" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/hard to say/Hard to say-6.jpg" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/hard to say/Hard to say-7.jpg" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/hard to say/Hard to say-8.jpg" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/hard to say/Hard to say-9.jpg" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/photograph/hard to say/Hard to say-1.jpg" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/hard to say/Hard to say-2.jpg" alt="" width="330px"><img src="../image/photograph/hard to say/Hard to say-3.jpg" alt="" width="330px"><p>&nbsp;</p>
+			<img src="../image/photograph/hard to say/Hard to say-4.jpg" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/hard to say/Hard to say-5.jpg" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/hard to say/Hard to say-6.jpg" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/hard to say/Hard to say-7.jpg" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/hard to say/Hard to say-8.jpg" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/hard to say/Hard to say-9.jpg" alt="" width="660px"><p>&nbsp;</p>
 			
 			
 		</div>
