--- a/photography/ontheroad.html
+++ b/photography/ontheroad.html
@@ -40,13 +40,12 @@
 				<ul >
 					<li><a href="../forganlu.github.io/photography/oldman.html">Old Man</a></li>
 					<li><a href="../forganlu.github.io/photography/liquid.html">Liquid</a></li>
-					<li><a href="../forganlu.github.io/photography/ritzsdream.html">Ritz's Dream</a></li>
 					<li><a href="../forganlu.github.io/photography/ontheroad.html">On the Road</a></li>
 					<li><a href="../forganlu.github.io/photography/building.html">Building</a></li>
 					<li><a href="../forganlu.github.io/photography/hardtosay.html">Hard to say</a></li>
 					<li><a href="../forganlu.github.io/photography/polaroidinhk.html">Polaroid in HK</a></li>
-					<li><a href="../forganlu.github.io/photography/groupphoto.html">Group Photo</a></li>
-					<li><a href="../forganlu.github.io/photography/2021bdp.html">2021BDP</a></li>
+					<!--<li><a href="../forganlu.github.io/photography/groupphoto.html">Group Photo</a></li>
+					<li><a href="../forganlu.github.io/photography/2021bdp.html">2021BDP</a></li>-->
 				</ul>
 			</li>
 			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
@@ -58,24 +57,23 @@
 	</div>	
 	<div class="about">
 		<div class="container">
-			<span style="background-color:rgb(255, 255, 255)" >
-			<br />
-			<br /></span>
+			<p>
+				<strong>On the Road</strong> | black and white film<br/>
+				Apr/May 2021<br/>
+			</p><p>&nbsp;</p>
+			unavailabe<br />
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<img src="../image/photograph/on the road/ontheroad-1.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/on the road/ontheroad-2.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/on the road/ontheroad-3.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/on the road/ontheroad-4.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/on the road/ontheroad-5.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/on the road/ontheroad-6.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/on the road/ontheroad-7.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/on the road/ontheroad-8.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/on the road/ontheroad-9.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/on the road/ontheroad-10.JPG" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/photograph/on the road/ontheroad-11.jpg" alt="" width="660px"><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			
+			<img src="../image/photograph/on the road/ontheroad-1.JPG" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/on the road/ontheroad-2.JPG" alt="" width="330px"><img src="../image/photograph/on the road/ontheroad-3.JPG" alt="" width="330px"><p>&nbsp;</p>
+			<img src="../image/photograph/on the road/ontheroad-4.JPG" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/on the road/ontheroad-5.JPG" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/on the road/ontheroad-6.JPG" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/on the road/ontheroad-7.JPG" alt="" width="330px"><img src="../image/photograph/on the road/ontheroad-8.JPG" alt="" width="330px"><p>&nbsp;</p>
+			<img src="../image/photograph/on the road/ontheroad-9.JPG" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/photograph/on the road/ontheroad-10.JPG" alt="" width="330px"><img src="../image/photograph/on the road/ontheroad-11.jpg" alt="" width="330px"><p>&nbsp;</p>
+			<p>&nbsp;</p><p>&nbsp;</p>
 		</div>
 			
 		<p>&nbsp;</p> 
