--- a/painting/EatingGoldfish.html
+++ b/painting/EatingGoldfish.html
@@ -59,7 +59,7 @@
 	<div class="about">
 		<div class="container">
 			<p><strong>Eating Goldfish | 吃金魚</strong><br />
-				The 23rd Workshop Project - OCT Boxes Art Museum<br />
+				The 23rd artist resident Project - OCT Boxes Art Museum<br />
 				Dec. 2020<br />
 			</p><br /><br />
 			<p><strong>Review by Qin Jin</strong><br /> 
