--- a/index-writing.html
+++ b/index-writing.html
@@ -63,7 +63,12 @@
 			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a></li>
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
 			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a></li>
-			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a></li><br />
+			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a>
+				<ul>
+				<li>
+					<a href="../forganlu.github.io/writing/writing-10.html">吃金鱼/Eating Goldfish</a>
+				</li></ul>
+			</li><br>
 			<li><a href="../forganlu.github.io/index-about.html"><span  >关于/about</span></a></li>
 			<li><a href="../forganlu.github.io/index-contact.html"><span  >联络/contact</span></a></li></span>
 		</ul>
@@ -87,24 +92,21 @@
 	</div>	-->
 	<div class="about">
 		<div class="writingfront">
-			<span style="background-color:rgb(60, 255, 0)" >Chinese Only.<br />
+			<p> <span style="background-color:rgb(60, 255, 0)" >Chinese Only.<br />
 			只用于中文版本。<br /><br />
-			Currently Unavaliable. <br />
-			目前羞於展示。<br /><br />
-			Thank you, I love you.<br />
-			谢谢，我爱你。
-			<p></p></span>
-			<!--<span style="background-color:rgb(255, 0, 0)" >
-			Selected writings are password required, please<a href="mailto:ganlu2525@outlook.com"><strong> email</strong></a>.<br />
-			部分文字请求阅读请<a href="mailto:ganlu2525@outlook.com"><strong>联系</strong></a>。</span> 
-			
+			Incompletely released.<br />
+			不完全发布。</span>
+			</div>
+			<div class="container">
+				<img src="../forganlu.github.io/image/writing/mewrite.jpg" alt="" width="660px"><br>
+				2nd Dec. 2021 / in Ύδρα (GR) / credit to Dominik André
+			</div>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p style="text-align:right">
+			<!--<p style="text-align:right">
 			<span style="background-color:rgb(255, 255, 255)">
-			文字是人类交流的方式，是我和我自己交流的方式。<br />
+			文字是人类交流的方式，也是我和我自己交流的方式。<br />
 			是我的日记簿，我通过文字写下自己的所见所闻。<br />
 			是检查自己生活的一个反思过程。<br />
 			是放松的过程。<br />
