--- a/painting/EatingGoldfish.html
+++ b/painting/EatingGoldfish.html
@@ -57,12 +57,15 @@
 		
 	</div>	
 	<div class="about">
-		<div class="container">
+		<div class="writingfront-writing">
 			<p><strong>Eating Goldfish | 吃金魚</strong><br />
 				The 23rd artist resident Project - OCT Boxes Art Museum<br />
 				Dec. 2020<br />
-			</p><br /><br />
-			<p><strong>Review by Qin Jin</strong><br /> 
+			</p>————<Br>
+			<p>
+			<strong>Description</strong><br>
+			This series of work based on the writing - <a href="../writing/writing-10.html"><strong>Eating Goldfish</strong></a><br><br><br>
+			<strong>Review by Qin Jin</strong><br /> 
 			Ganlu is a girl who can draw and write very well. When she was studying in the Fifth Studio of Guangzhou Academy of Fine Arts, she always liked to draw collage-based graffiti on large drawing books: with her unbridled smears and line drawings cheerfully dancing in between all kinds magazine papers, wrapping paper, photos, color cardboards and later digital prints, she conveyed what she was on paper. She called this kind of painting “simple-stroke painting”. Afterwards, she fell in love with story-writing. She created various characters, treated the stories as inspirations and backgrounds for her painting, and even directly juxtaposed words and images together, which hones her capability of understanding and applying these two languages. In order to achieve a certain pleasure of writing, Ganlu was acting like an alchemist dived into a laboratory. She mixed all kinds of seemingly incompatible things together, and added her own spells. Then chemical reactions were rolling out, overwhelming and dancing more ecstatically and cheerfully.<br />
 			</p><br />
 			<!--<p>评论：</p><br />
