--- a/writing/writing-10.html
+++ b/writing/writing-10.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../css/mysite.css">
-<title>Ganlu</title>
+<title>GANLU/WRITING</title>
 <link rel="icon" type="image/x-icon" href="../ICON.png" />
 </SCRIPT>
 <!--onselectstart:禁止选中 oncontextmenu:右键弹出版权 event.keyCode==27:按esc键表示放弃Esc键阻止网页继续载入,也就是说你按ESC键网页还是继续加载-->
@@ -76,31 +76,21 @@ return false;
 <main>
 <div class="bbox">
 	
-	<!-----------------------tophead----------------------->
-	<div class="tophead1">
-		<ul class="tophead">
-			<li><a href="../index-painting.html"><span style="background-color:rgb(255, 255, 255)" >绘画/painting</span></a></li>
-			<li><a href="../index-photography.html"><span style="background-color:rgb(255, 255, 255)" >摄影/photograph</span></a></li>
-			<li><a href="../index-writing.html"><span style="background-color:rgb(255, 0, 0)" >文字/writing</span></a></li>
-			<li><a href="../index-about.html"><span style="background-color:rgb(255, 255, 255)" >关于/about</span></a></li>
-			<li><a href="../index-contact.html"><span style="background-color:rgb(255, 255, 255)" >联络/contact</span></a></li>
-		</ul>
-	</div>
+	
 	<!------------------------lefthead--------------------->
 	<div  class="lefthead1">
 		<ul class="lefthead">
 			
-					<li><a href="../writing/writing-1.html">01. 2018.12.30 《马鹿》</a></li>
-					<li><a href="../writing/writing-2.html">02. 2019.01.09 《名字》</a></li>
-					<li><a href="../writing/writing-3.html">03. 2019.05.24 《旅馆》</a></li>
-					<li><a href="../writing/writing-4.html">04. 2019.10.22 《马鹿之死》</a></li>
-					<li><a href="../writing/writing-5.html">05. 2019.11.05 《美丽新世界》</a></li>
-					<li><a href="../writing/writing-6.html">06. 2019.12.04 《记忆空间》</a></li>
-					<li><a href="../writing/writing-7.html">07. 2020.02.14 《温暖的海》</a></li>
-					<li><a href="../writing/writing-8.html">08. 2020.02.17 《燕子啊燕子》</a></li>
-					<li><a href="../writing/writing-9.html">09. 2020.02.20 《末日的前好几天》</a></li>
-					<li><a href="../writing/writing-10.html"><strong>10. 2020.05.29 《吃金鱼》</strong></a></li>
-					<li><a href="../writing/writing-11.html">11. 2020.10.17 《1810号房间》</a></li>
+			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a></li>
+			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
+			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a></li>
+			<li><a href="../forganlu.github.io/index-writing.html"><span  >文字/writing</span></a>
+				<ul> <li>
+					<a href="../forganlu.github.io/writing/writing-10.html">吃金鱼/Eating Goldfish</a>
+				</li></ul>
+			</li><br>
+			<li><a href="../forganlu.github.io/index-about.html"><span  >关于/about</span></a></li>
+			<li><a href="../forganlu.github.io/index-contact.html"><span  >联络/contact</span></a></li>
 				
 		</ul>
 	</div>	
@@ -115,9 +105,10 @@ return false;
 	<div class="writingfront-writing">
 	
 		
-		<h3>《吃金鱼》</h3>
-		<img src="../image/writing/吃金鱼.jpg" alt="" width="660px">
-		<p>坚持去做一样什么事情非常困难，特别是在当她知道她没有脑子的时候。脑子却是个好东西。</p>
+		<!--<img src="../image/writing/吃金鱼.jpg" alt="" width="660px"><br/>-->
+		<h3>吃金鱼</h3><br>
+		
+		<p>坚持去做一样什么事情非常困难，特别是在当她知道她没有脑子的时候。但脑子却是个好东西。</p>
 		<p>她在地铁门口，任人挤着，想要跃出人群踏上地铁的门，可是失败了，另外一个人将她挤了下去，是一个美丽的女孩子，穿着灰色的衣服，她的衣服上似乎不是花纹，而是血迹。她感到自己十分不幸，但又无可奈何，她只好睁大着眼睛，把所有的愤怒都用在瞳孔上看着那个灰色的女孩，女孩吓了一跳，先是疑惑了一下，想到怎么会有这么没礼貌的人；后来也蹩脚地翻了一个白眼给马鹿。当然不能够示弱，她们死死地盯着对方直到列车开走把她们对视的眼睛强行拉开。两边的玻璃上都起了薄薄的一层雾气。用这样的方式来引起别人的注意可以说是一种挑衅了。</p>
 		<p>
 			马鹿想过有一天能够见到里厄。<br />
@@ -141,16 +132,23 @@ return false;
 		<p>这个人没有工作，生活靠社会福利，所以他并不富有。</p>
 		<p>金鱼越吃越多，它的食量越来越大。他没有办法，他害怕有一天金鱼会吃掉他，他饿着自己也会给金鱼买吃的。他沉思着。他在努力的想办法，他到处借钱给金鱼买饲料，但是没有人愿意借给他，也没有人愿意帮助他，他很无助。深夜里他无法入眠，他开始辗转，于是他拿起了刀叉慢慢地犹豫着地，走进了浴室。他想：只要他把金鱼吃了，金鱼就吃不了他了。他像是决定好了一样昂首挺胸的走到鱼缸前，拿着刀划开了它的肚子，撕扯着它的内脏。浴室里终于变成了血红色，他将鱼骨全都剔了出来，它身上的鱼鳞就电影里的龙鳞一般，手掌心一样大，飞散在浴室的墙上和地上。到了这个时候还是能够看见它的嘴巴在一张一合，像是不甘心地在努力呼吸。这个人开始用刀切鱼肉，一片一片，他在浴室里吃了三天三夜。他已经感觉不到味道了。他干枯的身体正在用尽所有的力气去消化这些鱼肉。他到了街上，没有地方让他落脚。处处都是别人异样的眼神。他开始怀疑，开始不自信。一种黑色的力量正在吞噬他，一个像金色钱币一样的洞正在向他靠近，他开始奔跑，想要逃到没有人的地方；可是没有用，身边总是有人会靠近他，他对着别人大声嘶吼想和别人保持距离。他跑到地铁站里，跨过闸门，里面一如既往的人多，他们簇拥着。刚好一辆列车到站了，他纵身越过所有的人，挤上了那辆车。但他看到车门外的一个女孩却用她硕大的眼睛瞪着他。</p>
 		<p>在这个世界上，是他留下的肮脏的，带有腥臭的，血液凝结着的，如同遗迹般优雅的浴室。</p>
-		<p>&nbsp;</p>
-		<p>&nbsp;</p>
 		
-		甘露<br />
-		2020.05.29
+		<p>&nbsp;</p>
+	
+	
+
+	</div>
+	<div class="writingfront-writing">
+	<p style="text-align:right">
+		GAN LU / 甘 露<br />
+		29th May 2020<br>
+		————<br>
+		<a href="../painting/EatingGoldfish.html">绘画 / artworks.</a>
+		</p></div>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 		<p>&nbsp;</p> 
-
-	</div>
+		<p>&nbsp;</p>
 	</div>
 	
 		
