--- a/index-photography.html
+++ b/index-photography.html
@@ -36,6 +36,7 @@
 			<li><a href="../forganlu.github.io/index-painting.html"><span  >绘画/painting</span></a></li>
 			<li><a href="../forganlu.github.io/index-photography.html"><span >摄影/photograph</span></a>
 				<ul >
+					<!--<li><a href="">Stolen ocean</a></li>-->
 					<li><a href="../forganlu.github.io/photography/oldman.html">Old Man</a></li>
 					<li><a href="../forganlu.github.io/photography/liquid.html">Liquid</a></li>
 					<li><a href="../forganlu.github.io/photography/ontheroad.html">On the Road</a></li>
@@ -61,9 +62,9 @@
 				不完全发布。</span>
 		</div>
 		<div class="writingfront-writing">
-				<br />
-				<br />
-				<br />
+			<img src="../forganlu.github.io/image/photograph/meph.png" alt="" width="660px"><br>
+			Oct. 2021 / in Athens (GR) / credit to Dominik André<br>
+				<!----
 				<br />
 				我们人类，为了自由，而生活在这个世界上。<br />
 				但是很多时候我们自己却忘记了所做出的努力是为了什么。<br />
@@ -93,7 +94,7 @@
 				“How free it is!” I was thinking.<br />
 				“It is freedom.” I was thinking again.<br />
 				<br />
-				Only rain can trap the freedom.<br />
+				Only rain can trap the freedom.<br />-->
 				<p>&nbsp;</p>
 				<p>&nbsp;</p>
 				<p>&nbsp;</p>
